# xilian-platform

./: .dockerignore  .env.development  .env.docker  .env.local.example  .env.local.template  .env.production.template  .env.template  .gitignore  .mcp.json  API路由层修复报告.md  AUDIT_FINDINGS.md  AUDIT_PLAN.md  AUDIT_REPORT.md  AUDIT_TODO.md  CLAUDE.md  DATABASE-ARCHITECTURE.md  DB_ARCHITECTURE_REVIEW.md  DEPLOYMENT.md  Dockerfile  MIGRATION_GUIDE.md  MYSQL_API_REFERENCE.md  P0-基座加固修复报告.md  README.md  SYNC_INSTRUCTIONS.md  V4_AUDIT_REPORT.md  action-plan-checklist.md  all-reports-extract.txt  analysis-db-tables.md  audit_checklist.md  base-audit-findings-v2.md  batch3-issues.md  batch4-issues.md  batch5-issues.md  batch6-issues.md  batch7-8-9-issues.md  check-report.md  code-review-findings.md  data-artery-audit.md  docker-compose.microservices.yml  docker-compose.yml  (+43 more)
.devcontainer/: README.md  devcontainer.json  docker-compose.devcontainer.yml
.github/: dependabot.yml
.husky/: pre-commit
client/: index.html
deploy/: README.md
docker/: docker-compose.kafka.yml  start-kafka.sh
docs/: ALGORITHM_CONFIGURATION_LAYER.md  ALGORITHM_INVENTORY.md  ARCHITECTURE.md  ARCHITECTURE_DESIGN.md  COMPLETE_FIX_PLAN.md  DATABASE-ARCHITECTURE.md  DEPLOYMENT.md  DEV-STARTUP-GUIDE.md  DISTRIBUTED_DB_ARCHITECTURE.md  ENV_CONFIG.md  FEDERATED_KNOWLEDGE_DISTILLATION.md  FIX_DEPENDENCY_GRAPH.md  KNOWLEDGE_ARCHITECTURE.md  LESSONS_LEARNED.md  LOCAL-DEPLOYMENT-GUIDE.md  LOCAL_DEPLOYMENT.md  MASTER_DEVELOPMENT_PLAN.md  MCP_OLLAMA_SETUP.md  MICROSERVICE_CONFIG_ARCHITECTURE.md  PITFALLS.md  PLATFORM_SPLIT_ARCHITECTURE.md  PortAI_Nexus_v2.1_Report.md  REVIEW_CHECKPOINTS.md  SESSION_STATE.md  SPRINT_PLAN.md  TWIN-TOOLING-CONFIG-SPEC.md  XPE-v1.1-design.md  _audit_notes.md  _phase4-impl-notes.md  acceptance-report-v2.1.md  access-layer-alignment-analysis.md  access-layer-audit-issues.md  access-layer-integration-proposal.md  algorithm-empowerment-module-analysis.md  algorithm-library-design-v2.md  algorithm-library-implementation-report.md  api-gap-analysis.md  api-reference.md  api-spec.md  architecture-assessment.md  (+89 more)
src/rust-modules/data-aggregator/: Cargo.toml
src/rust-modules/data-aggregator/src/: lib.rs
src/rust-modules/signal-processor/: Cargo.toml
src/rust-modules/signal-processor/src/: lib.rs
(+1537 files in other folders)
