[package]
name = "xilian-data-aggregator"
version = "0.1.0"
edition = "2021"
authors = ["西联智能平台团队"]
description = "高性能数据聚合模块 - 用于港口设备传感器数据的实时聚合和统计"
license = "MIT"
repository = "https://github.com/xilian/data-aggregator"

[lib]
crate-type = ["cdylib", "rlib"]
name = "data_aggregator"

[dependencies]
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 并行处理
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"

# 数据结构
dashmap = "5.5"
indexmap = "2.1"

# 日志
log = "0.4"
env_logger = "0.10"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 统计
statrs = "0.16"

# 哈希
ahash = "0.8"

# Node.js 绑定
neon = { version = "1.0", optional = true }

# WebAssembly 支持
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
nodejs = ["neon"]
wasm = ["wasm-bindgen"]

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "aggregator_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
