[package]
name = "xilian-signal-processor"
version = "0.1.0"
edition = "2021"
authors = ["西联智能平台团队"]
description = "高性能信号处理模块 - 用于港口设备传感器数据的实时处理"
license = "MIT"
repository = "https://github.com/xilian/signal-processor"

[lib]
crate-type = ["cdylib", "rlib"]
name = "signal_processor"

[dependencies]
# FFT 和信号处理
rustfft = "6.1"
num-complex = "0.4"
num-traits = "0.2"

# 并行处理
rayon = "1.8"
crossbeam = "0.8"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 日志
log = "0.4"
env_logger = "0.10"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# SIMD 优化
packed_simd_2 = { version = "0.3", optional = true }

# Node.js 绑定
neon = { version = "1.0", optional = true }

# WebAssembly 支持
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
simd = ["packed_simd_2"]
nodejs = ["neon"]
wasm = ["wasm-bindgen"]

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "signal_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
